# SrcM

./: .gitignore  Makefile  README.md  SrcM.kdev4
.kdev4/: SrcM.kdev4
src/: CMakeLists.txt  GenerateProjects.sh  src.kdev4
src/.kdev4/: src.kdev4
src/CMakeScripts/: PublicHeaders.cmake  SourceBase.cmake  SourceDirectories.cmake  SourceLibWinBase.cmake  SourceLibrary.cmake  SourcePosixBase.cmake
src/Makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake
src/Makefiles/mathlib/: Makefile  cmake_install.cmake
src/Makefiles/raytrace/: Makefile  cmake_install.cmake
src/Makefiles/tier1/: Makefile  cmake_install.cmake
src/docs/interfaces/html/: _add_on_messages_8h.html  _add_on_messages_8h.js  _add_on_messages_8h_source.html  _add_on_types_8h.html  _add_on_types_8h.js  _add_on_types_8h_source.html  _analog_bar_8h.html  _analog_bar_8h_source.html  _analog_code_8h.html  _analog_code_8h.js  _analog_code_8h_source.html  _animating_image_panel_8h.html  _animating_image_panel_8h_source.html  _animation_controller_8h.html  _animation_controller_8h.js  _animation_controller_8h_source.html  _app_framework_8h.html  _app_framework_8h.js  _app_framework_8h_source.html  _base_shader_8h.html  _base_shader_8h.js  _base_shader_8h_source.html  _bitmap_font_file_8h.html  _bitmap_font_file_8h.js  _bitmap_font_file_8h_source.html  _bitmap_image_panel_8h.html  _bitmap_image_panel_8h_source.html  _build_group_8h.html  _build_group_8h.js  _build_group_8h_source.html  _build_mode_dialog_8h.html  _build_mode_dialog_8h_source.html  _button_8h.html  _button_8h_source.html  _button_code_8h.html  _button_code_8h.js  _button_code_8h_source.html  _check_button_8h.html  _check_button_8h_source.html  _check_button_list_8h.html  (+8897 more)
src/docs/materialsystem/html/: _base_v_s_shader_8cpp.html  _base_v_s_shader_8cpp.js  _base_v_s_shader_8h.html  _base_v_s_shader_8h.js  _base_v_s_shader_8h_source.html  _bloom_8cpp.html  _blur_filter_x_8cpp.html  _blur_filter_x__dx80_8cpp.html  _blur_filter_y_8cpp.html  _blur_filter_y_8cpp.js  _blur_filter_y__dx80_8cpp.html  _blur_filter_y__dx80_8cpp.js  _debug_draw_envmap_mask_8cpp.html  _debug_draw_envmap_mask_8cpp.js  _debug_texture_view_8cpp.html  _s_d_k___bloom__ps20_8inc.html  _s_d_k___bloom__ps20b_8inc.html  _s_d_k__bloomadd__ps20_8inc.html  _s_d_k__bloomadd__ps20b_8inc.html  _s_d_k__screenspaceeffect__vs20_8inc.html  _world_vertex_transition__dx8_8cpp.html  _world_vertex_transition__dx8_8cpp.js  annotated.html  annotated_dup.js  cable__dx6_8cpp.html  cable__dx6_8cpp.js  cable__dx8_8cpp.html  cable__dx8_8cpp.js  cable__dx9_8cpp.html  cable__dx9_8cpp.js  class_c_base_v_s_shader-members.html  class_c_base_v_s_shader.html  class_c_base_v_s_shader.js  class_c_command_buffer_builder-members.html  class_c_command_buffer_builder.html  class_c_command_buffer_builder.js  class_c_dx9_types-members.html  class_c_dx9_types.html  class_c_dx9_types.js  class_c_example_model___d_x9___context-members.html  (+439 more)
src/docs/mathlib/html/: 3dnow_8cpp.html  3dnow_8cpp.js  3dnow_8h.html  3dnow_8h.js  3dnow_8h_source.html  _ice_key_8cpp.html  _ice_key_8cpp.js  almostequal_8cpp.html  almostequal_8cpp.js  annotated.html  annotated_dup.js  anorms_8cpp.html  anorms_8cpp.js  bumpvects_8cpp.html  bumpvects_8cpp.js  class_ice_subkey.html  (+135 more)
src/fgdlib/: CMakeLists.txt  fgdlib.vcxproj.vpc_crc
src/game/: DumpClientFiles.sh  client_files.txt  client_files2.txt  server_files.txt  server_files2.txt
src/game/client/: CMakeLists.txt  client_base.vpc  client_hl2mp.vcxproj.filters  client_hl2mp.vcxproj.vpc_crc  client_hl2mp.vpc  client_linux32_hl2mp.mak  client_linux32_hl2mp.mak.vpc_crc
src/game/client/CMakeScripts/: ClientSources.cmake
src/game/client/Debug_mod_hl2mp/: client.lib
src/game/client/renderer/: IRenderer.h  RenderSystem.cpp  RenderSystem.h  window.cpp  window.h
src/game/client/renderer/vk/: vk-interface.cpp  vk-interface.h  vk.h  vkinit.cpp  vkutil.cpp
src/game/server/: CMakeLists.txt  ai_squad.h  nav_mesh.vpc  server_base.vpc  server_hl2mp.vcxproj.filters  server_hl2mp.vcxproj.vpc_crc  server_hl2mp.vpc  server_linux32_hl2mp.mak  server_linux32_hl2mp.mak.vpc_crc  server_linux32_hl2mp.project
src/game/server/CMakeScripts/: ServerSources.cmake
src/game/server/Debug_mod_hl2mp/: server.lib
src/game/shared/: gamestats.h
src/lib/public/: mathlib.lib  raytrace.lib  tier2.txt
src/materialsystem/stdshaders/: game_shader_dx9_hl2mp.vcxproj.filters  game_shader_dx9_hl2mp.vcxproj.vpc_crc  game_shader_dx9_linux32_hl2mp.mak  game_shader_dx9_linux32_hl2mp.mak.vpc_crc
src/mathlib/: CMakeLists.txt  mathlib.vcxproj.vpc_crc  mathlib_linux32.mak  mathlib_linux32.mak.vpc_crc
src/public/: networkvar.h  server_class.h
src/public/tier0/: memoverride.cpp
src/public/tier1/: threadpool.h
src/raytrace/: CMakeLists.txt  raytrace.cpp  raytrace.vcxproj.vpc_crc
src/tier1/: CMakeLists.txt  tier1.vcxproj.filters  tier1.vcxproj.vpc_crc  tier1.vpc
src/utils/captioncompiler/: captioncompiler.vcxproj.vpc_crc
src/utils/glview/: glview.vcxproj.vpc_crc
src/utils/height2normal/: height2normal.vcxproj.vpc_crc
src/utils/motionmapper/: motionmapper.vcxproj.vpc_crc
src/utils/phonemeextractor/: phonemeextractor.vcxproj.filters  phonemeextractor.vcxproj.vpc_crc
src/utils/qc_eyes/: qc_eyes.vcxproj.vpc_crc
src/utils/serverplugin_sample/: serverplugin_empty.vcxproj.filters  serverplugin_empty.vcxproj.vpc_crc  serverplugin_empty_linux32.mak  serverplugin_empty_linux32.mak.vpc_crc
src/utils/tgadiff/: tgadiff.vcxproj.vpc_crc
src/utils/vbsp/: vbsp.vcxproj.vpc_crc
src/utils/vice/: vice.vcxproj.vpc_crc
src/utils/vrad/: vrad_dll.vcxproj.filters  vrad_dll.vcxproj.vpc_crc
src/utils/vrad_launcher/: vrad_launcher.vcxproj.vpc_crc
src/utils/vtf2tga/: vtf2tga.vcxproj.vpc_crc
src/utils/vtfdiff/: vtfdiff.vcxproj.vpc_crc
src/utils/vvis/: vvis_dll.vcxproj.filters  vvis_dll.vcxproj.vpc_crc
src/utils/vvis_launcher/: vvis_launcher.vcxproj.vpc_crc
src/vgui2/vgui_controls/: vgui_controls.vcxproj.vpc_crc  vgui_controls_linux32.mak  vgui_controls_linux32.mak.vpc_crc
src/vpc_scripts/: source_dll_win32_base.vpc
(+15118 files in other folders)
